--- a/assets/includes/navbar.html
+++ b/assets/includes/navbar.html
@@ -23,11 +23,11 @@
           </ul>
         </div>
       </li>
-
-
       <li><a href="blog.html" class="nav-link" data-i18n="nav.blog">Blog</a></li>
       <li><a href="nosotros.html" class="nav-link" data-i18n="nav.about">Nosotros</a></li>
       <li><a href="contacto.html" class="nav-link" data-i18n="nav.contact">Contacto</a></li>
-    </ul>
+      <li><a href="distribuidores.html" class="nav-link">Asociados</a></li>
+      <li><a href="registro-equipo.html" class="nav-link">Registro de Equipo</a></li>
+    </ul>||
   </div>
 </nav>
