--- a/assets/css/producto-detalle.css
+++ b/assets/css/producto-detalle.css
@@ -429,6 +429,20 @@
             color: var(--text-gray);
             }
 
+            .cod-notice{
+                text-align: center;
+                margin-top: 14px;
+                margin-bottom: 14px;
+                background: var(--primary-blue);
+                color: var(--white);
+                padding: 12px 16px;
+                border-radius: var(--border-radius-md);
+                font-weight: 700;
+                font-size: 20px;
+                box-shadow: var(--shadow-sm);
+            }
+
+
         /* Responsive */
         @media (max-width: 968px) {
             .product-detail-layout {
